--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,11 @@ ELAN Clothes Store  </h1>
 </div> -->
 
 <div id="all">
+
   <app-navbar ></app-navbar>
-</div>
-<router-outlet></router-outlet>
+
+ 
+
+
+
+<router-outlet></router-outlet></div>
