--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,21 @@
 <div id="all">
 
 
+    <div  style ="text-align:center; direction: ltr"  id="titlebar">
+
+ 
+
+        <h1 >
+      ELAN Clothes Store  </h1>
+      
+      {{login}}
+      
+        <img width="300" alt="Angular Logo" src="images/home2.jpg">
+      </div>
 </div>
 
 
-<app-upload-image></app-upload-image> 
+<!-- <app-upload-image></app-upload-image>  -->
   <!-- <angular-image-slider [images]="imagesUrl"></angular-image-slider> -->
 
 <!-- <app-card> card in home </app-card> -->
