--- a/src/app/sectios/sectios.component.css
+++ b/src/app/sectios/sectios.component.css
@@ -7,3 +7,9 @@
 #title{
    float: left;
 }
+
+.hdpe{
+
+   /* background-image:url("http://fakeimg.pl/365x365/"); */
+    background-color: #cccccc;
+}
