--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@
 }
 
 #all{
-  /*  width: 100%;
-    height: 600px;
-    background-color: #867979;*/
+    width: 100%;
+   min-height: 1000px;
+    background-color: #b3b3b3;
 }
