--- a/src/app/api-data/api-data.component.css
+++ b/src/app/api-data/api-data.component.css
@@ -1,12 +1,22 @@
-#addform{
-margin-left: 50px;
-}
+
 #table1{
-width : 60%;
-margin: 50px;
+
+
+background-color:slategray
 
 }
+#addform{
+  background-color:rgb(195, 204, 214);
+  width : 70%;
+  margin: 50px;
+}
+#addform input{
+  width: 100
+}
+label{
+font-weight: bold
 
+}
 .NgIfElse {
     show: boolean = true;
   }
