--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,52 @@
-
+<!-- 
 <div id="all">
 
 
     <div  style ="text-align:center; direction: ltr"  id="titlebar">
 
  
-
+      <br>
         <h1 >
       ELAN Clothes Store  </h1>
       
-      {{login}}
+      <br> <br>
       
-        <img width="300" alt="Angular Logo" src="images/home2.jpg">
+        <img width="100%" alt="Angular Logo" src="../../assets/img/home.jpg">
+        <br><br>
+       <div class="row">
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="../../assets/img/jacket.jpg" alt="">
+          <h3>Men Clothes
+            <small>Men Clothes</small>
+          </h3>
+          <p>various types of men clothes, jackets, jeans, T-shirts, ....</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="../../assets/img/bb.png" alt="">
+          <h3>Kids Clothes
+            <small>Kids Clothes</small>
+          </h3>
+          <p>various types of men clothes, jackets, jeans, T-shirts, ....</p>
+        </div>
+     
+
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="../../assets/img/bb.png" alt="">
+          <h3>Kids Clothes
+            <small>Kids Clothes</small>
+          </h3>
+          <p>various types of men clothes, jackets, jeans, T-shirts, ....</p>
+        </div>
+     
       </div>
-</div>
+      </div>
+
+    </div> -->
+
+<!-- Footer -->
 
 
-<!-- <app-upload-image></app-upload-image>  -->
+<app-upload-image></app-upload-image> 
   <!-- <angular-image-slider [images]="imagesUrl"></angular-image-slider> -->
 
 <!-- <app-card> card in home </app-card> -->
