--- a/src/app/sectios/sectios.component.html
+++ b/src/app/sectios/sectios.component.html
@@ -26,7 +26,7 @@
       </p>  -->
  
       <div class="col-lg-4 col-sm-6 text-center mb-4"  *ngFor="let obj of data" (click) = "onSelect(obj) ">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="../../assets/img/images.jpg" alt="">
+          <img class="rounded-circle img-fluid d-block mx-auto img" src="{{obj.img}}" alt="">
           <h3>{{obj.name}}
            
           </h3>
